Fix contrast issue

--- a/assets/css/themes.scss
+++ b/assets/css/themes.scss
@@ -8,7 +8,7 @@
     --color-border: #eceeef;
     --color-primary: #E2001A;
     --color-primary-offset: #a71a3b;
-    --color-secondary: #21A8A3;
+    --color-secondary: #188985;
 }
 
 @media (prefers-color-scheme: light),
@@ -22,7 +22,7 @@
         --color-border: #eceeef;
         --color-primary: #E2001A;
         --color-primary-offset: #a71a3b;
-        --color-secondary: #21A8A3;
+        --color-secondary: #188985;
     }
 }
 
@@ -36,7 +36,7 @@
         --color-border: #2d2d2d;
         --color-primary: #E2001A;
         --color-primary-offset: #ff2957;
-        --color-secondary: #21A8A3;
+        --color-secondary: #188985;
     }
 }
 
@@ -48,7 +48,7 @@
     --color-border: #eceeef;
     --color-primary: #E2001A;
     --color-primary-offset: #a71a3b;
-    --color-secondary: #21A8A3;
+    --color-secondary: #188985;
 }
 
 // Dark
@@ -60,7 +60,7 @@
     --color-border: #2d2d2d;
     --color-primary: #E2001A;
     --color-primary-offset: #ff2957;
-    --color-secondary: #21A8A3;
+    --color-secondary: #188985;
 }
 
 // Coastal Mirage
